Fix Vercel serverless deployment: add api handler and Prisma postinstall

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
+    "postinstall": "prisma generate",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "vercel-build": "prisma generate && prisma migrate deploy"
   },
   "keywords": ["story-protocol", "ai", "marketplace", "web3"],
   "author": "",
