--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "vercel-build": "prisma generate && prisma migrate deploy"
+    "vercel-build": "prisma generate"
   },
   "keywords": ["story-protocol", "ai", "marketplace", "web3"],
   "author": "",
