--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,8 +7,10 @@ RPC_PROVIDER_URL=https://aeneid.storyrpc.io
 # JWT Secret
 JWT_SECRET=your_super_secret_jwt_key_change_this
 
-# Database (Use a cloud database like Neon, PlanetScale, or Supabase for production)
-DATABASE_URL=postgresql://user:password@localhost:5432/prompip?schema=public
+# Database - Supabase PostgreSQL (recommended for Vercel deployment)
+# Get your connection string from: Supabase Dashboard > Project Settings > Database > Connection String (URI)
+# Format: postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
+DATABASE_URL="postgresql://postgres:your-password@db.xxxxxxxxxxxxx.supabase.co:5432/postgres"
 
 # Server
 PORT=3001
