changes to frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,5 +4,5 @@
 # Leave empty for local development (uses Vite proxy)
 VITE_API_URL=
 
-# Example for production:
-# VITE_API_URL=https://your-backend.vercel.app/api
+# Example for production (replace with your actual backend URL):
+# VITE_API_URL=https://promp-ip-backend-001.vercel.app/api
