Fix Vercel backend build configuration

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
   "builds": [
     {
       "src": "api/index.ts",
@@ -11,5 +12,8 @@
       "src": "/(.*)",
       "dest": "api/index.ts"
     }
-  ]
+  ],
+  "env": {
+    "VERCEL": "1"
+  }
 }
